--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title></title>
   </head>
   <body>
-<h1> Sobre o salão hellena </h1>
-
+<h1> Sobre o salão hellena </h1> 
+<p> Localiza no coração da cidade de Camargo, o Salão da hellena traz para o mercado o que há de 
+mulher para seus cabelos e barbas. Fundamento em 2021 o salão da hellena já é destaque em quase
+toda cidade e conquista novos clientes a cada dia.</p>
+<p> ¨Nosso missão é: Fazer beleza e auto-estima para as cliente¨.</p>
+<p> Oferecemos profissionais experientes e antenados ás mudanças no mundo da medo. O atendimento
+possui padrão de excelencia e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 </body>
 </html>
