--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-<h1> Sobre o salão hellena </h1> 
+<h1> Sobre o salão Hellena </h1> 
 <p> Localiza no coração da cidade de Camargo, o Salão da hellena traz para o mercado o que há de 
 mulher para seus cabelos e barbas. Fundamento em 2021 o salão da hellena já é destaque em quase
 toda cidade e conquista novos clientes a cada dia.</p>
